# math-logic

./: logic_utils.py  pyproject.toml  pytest.ini
conditions/: 01.md
predicates/: completeness.py  completeness_test.py  deduction.py  deduction_test.py  functions.py  functions_test.py  prenex.py  prenex_test.py  proofs.py  proofs_test.py  prover.py  prover_test.py  semantics.py  semantics_test.py  some_proofs.py  some_proofs_test.py  syntax.py  syntax_test.py
prelim/: prelim.py  prelim_test.py
propositions/: axiomatic_systems.py  deduction.py  deduction_test.py  operators.py  operators_test.py  proofs.py  proofs_test.py  reductions.py  reductions_test.py  semantics.py  semantics_test.py  some_proofs.py  some_proofs_test.py  soundness.py  soundness_test.py  syntax.py  syntax_test.py  tautology.py  tautology_test.py
tests/: test_chapter00.py  test_chapter01.py  test_chapter02.py  test_chapter03.py  test_chapter04.py  test_chapter05.py  test_chapter06.py  test_chapter07.py  test_chapter08.py  test_chapter09.py  test_chapter10.py  test_chapter11.py  test_chapter12.py
