[tool.poetry]
name = "math-logic"
version = "0.1.0"
description = ""
authors = ["werserk <werserk@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120